--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.2"
-  }
+  },
+  npm install --save-dev typescript @types/react @types/node
+
+    typescript: Der TypeScript-Compiler selbst.
+    @types/react: Typdefinitionen für React, damit TypeScript React-Code verstehen kann.
+    @types/node: Typdefinitionen für Node.js-Umgebung, wichtig für Next.js.
+    --save-dev: Speichert diese Pakete als Entwicklungsabhängigkeiten in deiner package.json.
 }
