--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "lucide-react": "^0.303.0",
+    "recharts": "^2.10.3"
   },
-  npm install --save-dev typescript @types/react @types/node
-
-    typescript: Der TypeScript-Compiler selbst.
-    @types/react: Typdefinitionen für React, damit TypeScript React-Code verstehen kann.
-    @types/node: Typdefinitionen für Node.js-Umgebung, wichtig für Next.js.
-    --save-dev: Speichert diese Pakete als Entwicklungsabhängigkeiten in deiner package.json.
+  "devDependencies": {
+    "typescript": "^5.x.x",
+    "@types/react": "^18.x.x",
+    "@types/node": "^20.x.x",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
+  }
 }
